<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/lblPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/lbl_phone_number" />

    <EditText
        android:id="@+id/txtPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblPhoneNumber"
        android:layout_toLeftOf="@+id/btnContactPicker"
        android:ems="10"
        android:inputType="phone" >

        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/btnContactPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txtPhoneNumber"
        android:text="@string/btn_contact_picker" />

    <TextView
        android:id="@+id/lblRepetitions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPhoneNumber"
        android:layout_below="@+id/txtPhoneNumber"
        android:layout_marginTop="28dp"
        android:text="@string/lbl_repetitions" />

    <EditText
        android:id="@+id/txtRepetitions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lblRepetitions"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/lblMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtRepetitions"
        android:layout_below="@+id/txtRepetitions"
        android:layout_marginTop="28dp"
        android:text="@string/lbl_message" />

    <EditText
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSend"
        android:layout_alignLeft="@+id/lblMessage"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lblMessage"
        android:gravity="top"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/btn_send" />

</RelativeLayout>
